# similarity-ts

./: .gitignore  .mcp.json  .oxlintrc.json  .similarity-ignore  CHANGELOG.md  CLAUDE.md  CLI.md  Cargo.toml  README.md  RELEASE_NOTES.md  TODO.md  benchmark_results.txt  biome.json  clippy.toml  package.json  pnpm-lock.yaml  run_example.ts  test_functions.js  test_functions.ts  test_functions_simple.ts  test_min_lines.rs  test_python_debug.py  test_rust_code.rs  test_threshold.rs  tsconfig.json  tsdown.config.ts  vitest.config.ts
.cargo/: audit.toml
.claude/: mcp-server.ts  settings.json
.claude/commands/: check-similarity.md  dce.md
.github/workflows/: ci.yaml  rust.yaml
__deprecated/: package-build.json  tsdown.config.ts  vitest.config.ts
__deprecated/src/: index.ts  parser.ts
__deprecated/test/: basic.test.ts  duplication.test.ts  fixtures.test.ts  similarity.test.ts
benchmarks/: README.md
benchmarks/data/: analyze_self.ts  analyze_visitnode.ts  analyze_with_tsed.ts  apted_comparison.ts  detailed_comparison.ts  function_body_comparison.ts  oxc_similarity_example.ts  performance_test.ts  refactoring_demo.ts  test_duplicates.ts  test_simple.ts  tsed_benchmark.ts
crates/: TODO.md
crates/cli/: Cargo.toml  README.md
crates/cli/benches/: parallel_benchmark.rs
crates/cli/src/: check.rs  main.rs  parallel.rs  sequential.rs
crates/cli/tests/: integration_test.rs  tsx_test.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: function_comparison.rs  hybrid_parser_benchmark.rs  parser_comparison.rs  tsed_benchmark.rs
crates/core/examples/: multi_language_demo.rs  performance_test.rs  python_duplicate_finder.rs  test_enhanced_similarity.rs  test_rust_parser.rs  test_rust_parser_debug.rs
crates/core/src/: apted.rs  ast_exchange.rs  ast_fingerprint.rs  cli_file_utils.rs  cli_output.rs  cli_parallel.rs  enhanced_similarity.rs  fast_similarity.rs  function_extractor.rs  generic_overlap_detector.rs  generic_parser_config.rs  generic_tree_sitter_parser.rs  language_parser.rs  lib.rs  overlap_detector.rs  oxc_parser_adapter.rs  parallel_function_extractor.rs  parallel_parser.rs  parser.rs  python_parser.rs  rust_parser.rs  subtree_fingerprint.rs  tree.rs  tree_sitter_function_extractor.rs  tree_sitter_parser.rs  tsed.rs  type_comparator.rs  type_extractor.rs  type_normalizer.rs
crates/core/test_samples/: sample1.ts  sample2.ts
crates/core/tests/: ast_fingerprint_test.rs  debug_similarity.rs  false_positive_tests.rs  function_similarity_test.rs  multi_language_integration_test.rs  overlap_detection_test.rs  parent_child_test.rs  python_similarity_test.rs  rust_similarity_test.rs
crates/core/tests/fixtures/: sample1.ts
crates/similarity-elixir/: Cargo.toml  README.md
crates/similarity-generic/: Cargo.toml  README.md  build.rs
crates/similarity-generic/examples/: sample.go  usage.sh
crates/similarity-generic/examples/configs/: custom-language-template.json  go.json
crates/similarity-generic/language_configs/: c.json  cpp.json  csharp.json  java.json
crates/similarity-generic/src/: main.rs
crates/similarity-generic/tests/: ast_exchange_test.rs  c_detection_test.rs  cpp_detection_test.rs  csharp_detection_test.rs  go_detection_test.rs  java_detection_test.rs  multi_language_test.rs  ruby_detection_test.rs
crates/similarity-md/: Cargo.toml  README.md
crates/similarity-php/: Cargo.toml
crates/similarity-py/: Cargo.toml
crates/similarity-rs/: Cargo.toml
crates/similarity-rs/src/: check.rs  lib.rs  main.rs  parallel.rs  rust_parser.rs
crates/similarity-rs/tests/: debug_ast.rs  false_positive_test.rs  integration_test.rs  parser_test.rs  skip_test_option.rs  test_full_function_similarity.rs  test_min_tokens.rs  test_size_penalty.rs  test_tsed_debugging.rs
crates/similarity-ts/: Cargo.toml
docs/: README.md  ai-documentation.md  benchmark_results.md  dead_code_analysis.md  hybrid-approach-results.md  introduce-ja.md  multi_file_similarity.md  performance-baseline.md  performance-optimization.md  prompt-ja.md  prompt.md  python-support.md  refactoring_final_report.md  refactoring_implementation_plan.md  refactoring_plan.md  refactoring_progress.md  rust-ts-compare.md  similarity-summary.md  similarity.md  tsed-similarity-summary.md  tsed-similarity.md  type-similarity-design.md  visitor-implementation-example.md
docs/algorithm/: README.md  tree-sitter-integration-analysis.md  tsed-similarity.md
docs/implementation/: README.md  performance-optimization.md  rust-ts-compare.md
docs/lib/: README.md  multi_file_similarity.md  visitor-implementation-example.md
examples/: README.md  analyze_detailed_duplication.ts  analyze_duplication_fixtures.ts  analyze_project.ts  analyze_self.ts  analyze_visitnode.ts  analyze_with_tsed.ts  apted_comparison.ts  async_usage.ts  basic_usage.ts  benchmark.ts  class_to_function_test.ts  debug_arrow.ts  debug_ast.ts  detailed_comparison.ts  duplicate_python.py  duplication_demo.ts  function_body_comparison.ts  function_duplication_detection.ts  method_vs_function_comparison.ts  multi_file_similarity.ts  oxc_similarity_example.ts  performance_test.ts  quick_benchmark.ts  refactoring_demo.ts  run_benchmark.ts  test.py  test_async.ts  test_cli.ts  test_extraction.ts  test_refactored_extractor.ts  tsed_benchmark.ts  tsed_demo.ts
language_configs/: go.json  javascript.json  python.json  ruby.json
scripts/: generate_performance_fixtures.ts
src/: benchmark.ts  cli.ts  code_index.ts  code_index_functional.ts  code_repository.ts  code_repository_functional.ts  index.ts  index_functional.ts  io.ts  oxc_apted.ts  oxc_apted_functional.ts  oxc_similarity.ts  parser.ts
test/: apted.test.ts  apted_test.ts  basic.test.ts  class_to_function_detection_test.ts  duplication.test.ts  duplication_detection_test.ts  fixtures.test.ts  fixtures_integration_test.ts  fixtures_test.ts  function_extractor_test.ts  implementation_diff.test.ts  index_test.ts  oxc_parser_advanced_test.ts  oxc_parser_test.ts  performance_simple.test.ts  refactoring.test.ts  similarity.test.ts  similarity_test.ts
test_samples/: sample2.ts
(+179 files in other folders)
