[workspace]
members = [
    "crates/core",
    "crates/similarity-ts",
    "crates/similarity-py", "crates/similarity-rs",
]
resolver = "2"

[workspace.dependencies]
oxc_parser = "0.73.0"
oxc_ast = "0.73.0"
oxc_span = "0.73.0"
oxc_allocator = "0.73.0"
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
