[package]
name = "ts-similarity-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ts-similarity"
path = "src/main.rs"

[dependencies]
ts-similarity-core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = "0.5"
rayon = "1.10"

[[bench]]
name = "parallel_benchmark"
harness = false