[package]
name = "similarity-generic"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Generic language similarity analyzer using tree-sitter"
authors = ["mizchi"]
repository = "https://github.com/mizchi/similarity"

[[bin]]
name = "similarity-generic"
path = "src/main.rs"

[dependencies]
similarity-core = { version = "0.2.4", path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"