[package]
name = "similarity-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "similarity-rs"
path = "src/main.rs"

[dependencies]
similarity-ts-core = { path = "../core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rayon = "1.10"
ignore = "0.4"
walkdir = "2.5"
globset = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
